--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "autoprefixer": "^10.0.1",
+    "node-sass": "^4.14.1",
+    "postcss": "^8.1.1",
+    "pug": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.5.1"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
