--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "1m-svelte-app",
+  "version": "1.0.1",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.0.1",
     "node-sass": "^4.14.1",
     "postcss": "^8.1.1",
+    "postcss-combine-media-query": "^1.0.1",
     "pug": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
