--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public --single"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "autoprefixer": "^10.0.1",
-    "node-sass": "^4.14.1",
     "postcss": "^8.1.1",
     "postcss-combine-media-query": "^1.0.1",
     "pug": "^3.0.0",
@@ -18,6 +17,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.27.0",
     "svelte": "^3.0.0",
     "svelte-preprocess": "^4.5.1"
   },
