--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --single"
+    "start": "sirv public --single",
+    "deploy": "npm run build && node ./scripts/deploy.js"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "autoprefixer": "^10.0.1",
+    "gh-pages": "^3.1.0",
     "postcss": "^8.1.1",
     "postcss-combine-media-query": "^1.0.1",
     "pug": "^3.0.0",
